--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,15 +13,20 @@ spring.thymeleaf.cache=false
 spring.template.cache=false
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_test
+spring.datasource.url=jdbc:mysql://47.94.167.6:3306/b8a3
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=1qaz@WSX3edc
 
 #tomcat
 server.port = 8443
-server.ssl.key-store = classpath:keystore.p12
-server.ssl.key-store-password = 1qaz@WSX
-server.ssl.keyStoreType = PKCS12
+#server.ssl.key-store = classpath:keystore.p12
+#server.ssl.key-store-password = 1qaz@WSX
+#server.ssl.keyStoreType = PKCS12
+#server.ssl.keyAlias = tomcat
+
+server.ssl.key-store = classpath:tomcat.keystore
+server.ssl.key-store-password = 1qaz@WSX3edc
+server.ssl.keyStoreType = JKS
 server.ssl.keyAlias = tomcat
 
 
