--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ logging.level.*=DEBUG
 logging.file=/tmp/logs/server.log
 
 image.file.upload.dir=static/upload/
+server.contextPath=/b8a3/
 
 # 开发环境，关闭缓存
 spring.thymeleaf.cache=false
@@ -28,6 +29,8 @@ server.ssl.key-store = classpath:tomcat.keystore
 server.ssl.key-store-password = 1qaz@WSX3edc
 server.ssl.keyStoreType = JKS
 server.ssl.keyAlias = tomcat
+
+app.name=b8a3
 
 
 ## Keep the connection alive if idle for a long time (needed in production)
